# rust-app-password-manager

./: .gitignore  Cargo.toml  README.md  build.rs  nanopass.py
.cargo/: config  config.toml
.github/workflows/: rust.yml
doc/: impl.md
src/: main.rs  password.rs  tinyaes.rs
test/: automaton.py  nanopass.py  test.py  test_app.py
