[package]
name = "nanopass"
version = "1.2.0"
authors = ["yhql", "Olivier Hériveaux"]
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.59.2"

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
cty = "0.2.0"
heapless = { version = "0.7.16", default-features = false }

[profile.release]
opt-level = 's' 
lto = true

[package.metadata.nanos]
name = "NanoPass"
curve = "secp256k1"
flags = "0"
icon = "key_16x16.gif"
icon_small = "key_14x14.gif"
path = ""
